Fix height and scrollbar issue.

--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,13 @@
 html {
   margin: 0px;
   height: auto;
-  min-height: 100vh;
+  
   padding: 0px;
 }
 body {
   margin: 0px;
   padding: 0px;
   height: 100%;
-  min-height: 100vh;
   width: 100%;
 }
 
@@ -87,14 +86,14 @@ div.main-menu {
 section.home {
   height: 100%;
   display: flex;
-  min-height: 100vh;
+  min-height: 92vh;
   flex-direction: column;
 }
 
 #ship-list-page-content {
   margin: 10px 5px 0px 5px;
   height: 100%;
-  min-height: 94vh;
+  min-height: 92vh;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -103,15 +102,15 @@ section.home {
 #ship-data,
 #ship-side-list {
   display: flex;
+  flex-direction: column;
   padding: 15px;
   margin: 0px 5px 5px 5px;
   border: 1px dotted #353b48;
+  max-height: 88vh;
 }
 
 #ship-side-list {
   min-width: 20%;
-  justify-content: center;
-  flex-direction: column;
 }
 
 /* List top selector group */
@@ -207,6 +206,7 @@ section.home {
   padding: 0px;
   /*list-style-type: none;*/
   width: 100%;
+  overflow-y: auto;
 }
 
 .rList > li.rList-item {
